# Programmable-Web

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  database.py  docker-compose.setup.yml  docker-compose.yml  init_database.py  meetings.md  nginx.conf  nginx.setup.conf  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
auxiliary_service/: Dockerfile  README.md  server.py
database/: README_DB.md  init_database.py
database/instance/: test.db
issue_api/: __init__.py  api.py  constants.py  extensions.py  models.py  pyproject.toml  rpc.py  rpc_client.py  scheduler.py  tasks.py  utils.py
issue_api/doc/: base.yml
issue_api/doc/commentcollection/: post.yml
issue_api/doc/commentitem/: delete.yml
issue_api/doc/reportcollection/: get.yml  post.yml
issue_api/doc/reportitem/: delete.yml  get.yml  put.yml
issue_api/doc/reporttypecollection/: get.yml  post.yml
issue_api/doc/reporttypeitem/: delete.yml  put.yml
issue_api/doc/reportupvote/: delete.yml  get.yml  post.yml
issue_api/doc/usercollection/: get.yml  (+1 more)
issue_api/resources/: comment.py  report.py  report_type.py  upvote.py  user.py
issueapi-client/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
issueapi-client/src/: App.jsx  index.css  main.jsx
protobuf/: pyproject.toml  ranking.proto  ranking_pb2.py  ranking_pb2_grpc.py
protos/: pyproject.toml  ranking_pb2.py
report_ranker/: pyproject.toml  server.py
src/instance/: test.db
src/issue_api/: __init__.py  api.py  models.py  utils.py
tests/: resource_test.py
(+27 files in other folders)
